# fastapi_project

./: .coverage  pyproject.toml
fast_zero/: app.py
tests/: test_app.py
